--- a/dialog-lib/src/main/res/values/colors.xml
+++ b/dialog-lib/src/main/res/values/colors.xml
@@ -9,4 +9,11 @@
     <color name="normal_button_pressed">#E3E3E3</color>
     <color name="normal_bg">#FFFFFF</color>
 
+    <!-- material -->
+    <color name="material_title">#DE000000</color>
+    <color name="material_content">#8A000000</color>
+    <color name="material_btn_left">#383838</color>
+    <color name="material_btn_right">#468ED0</color>
+    <color name="material_btn_middle">#00796B</color>
+
 </resources>
